tests/fixtures/invalid/set_ge_dict.py
# Cannot compare with >= Set[int] and Dict[str, int]
x: bool = {1, 2, 3} >= {"a": 1}
